# minimals

poetry2nix-install-ffmpeg-python/: README.md  pyproject.toml  shell.nix
poetry2nix-install-ffmpeg-python/tests/: test_poetry2nix_install_ffmpeg_python.py
poetry2nix-install-matplotlib/: README.md  pyproject.toml  shell.nix
poetry2nix-service-dependencies/: README.md  default.nix  default2.nix  pyproject.toml  shell.nix
poetry2nix-service-dependencies/labeler/: server.py
