[tool.poetry]
name = "poetry2nix-install-matplotlib"
version = "0.1.0"
description = ""
authors = ["Michael Noronha <michaeltnoronha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
cppy = "^1.1.0"
matplotlib = "^3.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
